# BadgerBuildFest

./: .gitignore  ANALYSIS.md  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_STATUS.md  README.md  REFACTORING_SUMMARY.md  SETUP_INSTRUCTIONS.md  UI_INTEGRATION_STATUS.md  product_spec_identity_blockchain.md
Student Dashboard Design/: README.md  index.html  package.json
Student Dashboard Design/src/: App.tsx  index.css
Student Dashboard Design/src/components/: ActionCard.tsx  ProfileCard.tsx  Router.tsx  TopNavigation.tsx  VerificationRequestModal.tsx
Student Dashboard Design/src/pages/: DashboardPage.tsx  EmployerDashboardPage.tsx  EmployerLoginPage.tsx  IDVerificationPage.tsx  InstitutionDashboardPage.tsx  LandingPage.tsx  ProfileSetupPage.tsx  UserHomePage.tsx  WalletConnectPage.tsx
Student Dashboard Design/src/styles/: globals.css
backend/: package-lock.json  package.json
backend/idl/: credential_verification.json
backend/src/: index.ts
backend/src/config/: database.ts  solana.ts
backend/src/routes/: auth.ts  credentials.ts  institution.ts  resume.ts  verification.ts
backend/src/utils/: hash.ts  resumeParser.ts
database/: schema.sql
docs/: SETUP.md  SETUP_WINDOWS.md  WSL_TROUBLESHOOTING.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ActionCard.tsx  ProfileCard.tsx  TopNavigation.tsx  VerificationRequestModal.tsx  WalletProvider.tsx
frontend/lib/: api.ts
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
(+24 files in other folders)
